--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </section>
     </main>
     <h2 id="game-result-message"></h2>
+    <audio id="win-sound" src="win.mp3" preload="auto"></audio>
+    <audio id="lose-sound" src="lose.mp3" preload="auto"></audio>
     <script src="error-handler.js"></script>
     <script src="script.js"></script>
 </body>
